--- a/fitTrackBackend/src/main/resources/application.properties
+++ b/fitTrackBackend/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=newroot123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.docker.compose.enabled=false
