Added data set in db for different food items

--- a/fitTrackBackend/src/main/resources/application.properties
+++ b/fitTrackBackend/src/main/resources/application.properties
@@ -3,7 +3,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fitTrack
 spring.datasource.username=root
 spring.datasource.password=newroot123
 
+#good for testing since it drops dables and recreates them when started
 spring.jpa.hibernate.ddl-auto=update
+
+# use this later on to save changes when in production: spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.docker.compose.enabled=false
