--- a/fitTrackBackend/src/main/resources/application.properties
+++ b/fitTrackBackend/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 spring.application.name=fitTrackBackend
-spring.datasource.url=jdbc:mysql://localhost:3306/fitTrack
-spring.datasource.username=root
-spring.datasource.password=newroot123
 
-#good for testing since it drops dables and recreates them when started
+#good for testing since it drops tables and recreates them when started
 spring.jpa.hibernate.ddl-auto=update
 
 # use this later on to save changes when in production: spring.jpa.hibernate.ddl-auto=update
@@ -11,3 +8,19 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.docker.compose.enabled=false
+
+
+#JWT Config
+security.jwt.secret-key=${JWT_SECRET_KEY}
+security.jwt.expiration-time=3600000   # 1 hour (in milliseconds)
+
+#Mail Config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SUPPORT_EMAIL}
+spring.mail.password=${APP_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ENV file support
+spring.config.import=optional:file:.env[.properties]
