--- a/fitTrackBackend/src/main/resources/application.properties
+++ b/fitTrackBackend/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=fitTrackBackend
-
+spring.datasource.url=jdbc:mysql://localhost:3306/fitTrack
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #good for testing since it drops tables and recreates them when started
 spring.jpa.hibernate.ddl-auto=update
 
@@ -12,7 +15,9 @@ spring.docker.compose.enabled=false
 
 #JWT Config
 security.jwt.secret-key=${JWT_SECRET_KEY}
-security.jwt.expiration-time=3600000   # 1 hour (in milliseconds)
+security.jwt.expiration-time=86400000
+
+# 1 hour (in milliseconds)
 
 #Mail Config
 spring.mail.host=smtp.gmail.com
