--- a/fitTrackBackend/src/main/resources/application.properties
+++ b/fitTrackBackend/src/main/resources/application.properties
@@ -27,5 +27,7 @@ spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+
+spring.ai.openai.api-key=${OPEN_AI_KEY}
 #ENV file support
 spring.config.import=optional:file:.env[.properties]
